# ChangeLog for dev-util/cucumber
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cucumber/ChangeLog,v 1.84 2014/09/15 05:20:33 graaff Exp $

  15 Sep 2014; Hans de Graaff <graaff@gentoo.org> -cucumber-1.3.2.ebuild,
  -cucumber-1.3.10.ebuild, -cucumber-1.3.14.ebuild:
  Cleanup.

  16 Aug 2014; Hans de Graaff <graaff@gentoo.org> cucumber-1.3.16.ebuild:
  Add ruby21.

  15 Aug 2014; Raúl Porcel <armin76@gentoo.org> cucumber-1.2.1.ebuild:
  sparc stable wrt #493780

  15 Aug 2014; Raúl Porcel <armin76@gentoo.org> cucumber-1.3.2.ebuild,
  cucumber-1.3.10.ebuild, cucumber-1.3.14.ebuild, cucumber-1.3.15.ebuild,
  cucumber-1.3.16.ebuild:
  Add ~sparc wrt #471306

*cucumber-1.3.16 (14 Aug 2014)

  14 Aug 2014; Hans de Graaff <graaff@gentoo.org> +cucumber-1.3.16.ebuild:
  Version bump.

  22 Jul 2014; Tobias Klausmann <klausman@gentoo.org> cucumber-1.3.15.ebuild:
  Keyworded on alpha, bug #465948

  21 Jul 2014; Tobias Klausmann <klausman@gentoo.org> cucumber-1.2.1.ebuild:
  Stable on alpha, bug #505920

  20 Jun 2014; Markus Meier <maekke@gentoo.org> cucumber-1.3.15.ebuild:
  add ~arm, bug #510876

  15 Jun 2014; Akinori Hattori <hattya@gentoo.org> cucumber-1.3.15.ebuild:
  keyword ~ia64 wrt bug #510876

  20 May 2014; Hans de Graaff <graaff@gentoo.org> cucumber-1.3.15.ebuild:
  Add ruby20. Drop arm, ia64 due to bug 510876. Drop alpha, sparc due to bug
  465948.

*cucumber-1.3.15 (16 May 2014)

  16 May 2014; Hans de Graaff <graaff@gentoo.org> +cucumber-1.3.15.ebuild:
  Version bump.

  13 May 2014; Manuel Rüger <mrueg@gentoo.org> cucumber-1.3.10.ebuild,
  cucumber-1.3.14.ebuild, cucumber-1.3.2.ebuild:
  Remove ruby18 specific case.

*cucumber-1.3.14 (11 May 2014)

  11 May 2014; Hans de Graaff <graaff@gentoo.org> +cucumber-1.3.14.ebuild:
  Version bump.

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> cucumber-1.2.1.ebuild,
  cucumber-1.3.10.ebuild, cucumber-1.3.2.ebuild:
  Remove ree18 and ruby18 target.
