@@ -1,9 +1,21 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX cucumber-0.7.3-remove-rspec2.patch 2751 SHA256 5858aa5d98a7e43cfd085d691d70084352f243ffae6019990a5b1a5f135fa989 SHA512 4e81ea42ac4484cb6dd1cbda69514c3eb2e8cf34d5d0e566566485fa4bb43d3a2d23111c1575ca492dc78526049c129fb67501a92890ce79a313c1ac1b3f242a WHIRLPOOL 33d6258be81f6e3fcc5627dc84792089e0368a2d0678df5fa59e6e6a3155f039c14a073e8d9278e0601fa57a73c2db67b463f996940b15b896483ef218929ba5
 DIST cucumber-1.2.1.gem 333312 SHA256 11df76fb89c90fd37493560879dbd284665320fbfeb91372e7edb7f4c68cdc26 SHA512 ec1e56974c312b3e39410bc84b99e7e103685f35dd804275cefcf345534ce0ea032bda63d73524a1f90e6785a5b91b3c9d36c617591d52a0c507eb109401ae51 WHIRLPOOL a1625c859baacced783552e2526f00e9f291d1a12d6900f2d84c3551c19394aaf89736dd03670a6b4f327887bf4100c6a990d6b7bd88f0a623b82afc61bd2a2e
 DIST cucumber-1.3.15.gem 276480 SHA256 a81a9594487cb0daf576163c9123dd922279dcec037ca5c7bf88f3a8887d8bf2 SHA512 a23e4e84d499ca0e6f26ef2d36d8fa5cb85bf699caab101c7dce61ea41a3ffdc0c84cd34a8659d6665e65f14891726d10c9e4d618a475ca8c413dd5e63bfd34a WHIRLPOOL 12e36f2d71547c64f4e5f6471814380bab5e49f01023bf23d9db4fb74740bbabb6f0c7d034e5347f6107477554c3e5e408978c428c8854e0825b9676d0b13f50
 DIST cucumber-1.3.16.gem 274432 SHA256 c218107f9601f875684baceb88da5d660f2d04c2c6c6626f5981e4019ae09285 SHA512 db2f825eec5f50fec55e683fa3c952214b16af4947487a7ef28de4c7db6449bbcfec83f5ef5b7da31e05926932583ad3c4fa6290330726135368b9bb6beb8d47 WHIRLPOOL c89b3708794c10f0c78c33f808e80ad06ebfb4ed7314ade2301cf74bfadfd6c5b593a69b02f7a9ce921fffcb9bb76c6e02a79e1a4a079e06149872fd85557d96
+DIST cucumber-1.3.17.gem 278528 SHA256 3d6029398314ebbbba899c0739e5777ca317cc02353c8a8bfe7510c772ef56be SHA512 85d36ea77df50b2e3ee0e53d92ac8134d45a620b0b8ddddd1625204a051986136039adf21d1d78e78be325441613aabaa4dfc0f951c69a04e36767e3ae9bc40f WHIRLPOOL 8a87e8b7562a9245c29082dc72da2aace9a51150e982750d7db8749fd3c8a168ee67a8f803b02ce84e5424a4a59a86e43e8f7814b177256cbe519735e65df312
 EBUILD cucumber-1.2.1.ebuild 1959 SHA256 43fc44851cef7021870bbbfdccc0adaf06730b89d0297ea574cb50eef7603915 SHA512 4e6afc2bab4d5ed2c63ae5e3f53849cbd0826db851bd7f5328b97b460312f4991770d5bdc05f1cd79b966896ae1338d05c2f115e79ab5f93180ae7f484ab06f9 WHIRLPOOL d8f0e4c4c0b9e337859c0beeca6206266579bf5d1f456f5a22c6447a2c13ff471ee5e8c70eec805ea6d8321e7bdf2b0f7942143f6f896156b69c95f34f918f43
 EBUILD cucumber-1.3.15.ebuild 2148 SHA256 0a81e36a95f13bb782fd41923cd3d0452acc869223a849b676a61f5c57979da6 SHA512 f584d1c6c9ae7ddc5e8e347b7bb5cdcec27d54ebe63dedfe8d9df0db2824057ba81da6a210dbd3b02c766fbc01b8ec41c6daaf9a5f0e95449d9ccc3b7bb8cbd7 WHIRLPOOL 38e58f7e5937aaba077fedcd3cae361a835242596921ead22fb982a9d378d6ced8706aaad2dd70d93011dfb9e066185d90acf85d094b695da8b4f93bb194d877
 EBUILD cucumber-1.3.16.ebuild 2155 SHA256 84ea430c7b6b02803a406ace3d7828d51821c25676ca0a4f3f727d893c8783f8 SHA512 e5239b83128400d2b80f14587a321bbe5a2899ccb112804df2e49ff14551023e602f72cf49837c9032f33ede416b18f4e18bf0bf8b77087ea4416abc10c88c92 WHIRLPOOL 061798ff8480513d14c389db6a1619ea5103f1b25caee0958d4f563a391221693038d25a85862db80cc98e6ea8a1cc85ee9b293c403631d4aa4d7e25643a20aa
-MISC ChangeLog 11937 SHA256 21118e31bc94d04389d549e898d5f9cbc266fad657f4883478d58173844c7bea SHA512 4a435af14421c16673e2a3329277b9cd79431e3a5df4d7309f348c307436c37083b33e5ed56f18de82f1d52afb836cbca4e6a70ece7c7b41bc9ffc848423d515 WHIRLPOOL 163972cbcd202e862921e394c92a96a9d2c583e6ad8e223082eed16ee46c9dfe22d16e724c26cda832ed7c0b7d425d3cf22669c9d66e6c208bd58e20ffcdbe3e
+EBUILD cucumber-1.3.17.ebuild 2160 SHA256 5c12a9d91fdc43927a73bdc797797e842f5a5107c4c1f5b416b4f357f756f906 SHA512 c52df9fc1af80d972d05b4a5dd183f5ab6ef3d1da23661e2dfe419eb593ee29815b7328e7a46237c35af0673726fb2d030741b46cd375d8869464813dbb04bc0 WHIRLPOOL 02496a43dba23201157a7fe38c3ef4db6a7ff8da77a868bc07e5085f2f00533df87d07499ae72c7ba09cd1af200eb945c873d2f5a6ac95a5ad42f993a33ab84a
+MISC ChangeLog 12061 SHA256 4461b92dc2558591593f8520f605acb8a5dfd605445abfa7752ceb13d3a37bde SHA512 b260b29d9312ef0e38491bd26a0ccc101398c038c38138c39f71ea49418adcbc57787b280ec31afe04b5431301ea063c2ff6ff4143075ad058f4c8e9a4e74afa WHIRLPOOL d48d5d015f4ea9b367c613f138b2501dc3dd023707b80f733ff94e992f52680afaf0c44e54ac01f65d05b016b745acbfa5ae9b737dee1faf4fc0f66a58c3099d
 MISC metadata.xml 201 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad SHA512 3131e5281b343002ef359d7199da425d3f9f5406ef4ddd9332eccad6b78e3ced62adedd4dfe14538db391d2590811df6f2a15cada5a1e924479a0189cd69b7d3 WHIRLPOOL 8631f9384237d55afedca6bba2e9e6b80f5d260ec195de52a736072d4c743579e435c363404e0561a05708c07fbb92e21d69aaff1273b9f724d25b3f59b26fe6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlQWeVIACgkQiIP6VqMIqNfobgEAj/7Lete3JGiCSERJHkrcFBQS
+BfHjvjCSyvd9gbpdhCEA/jyvWNsAKY1OeoUwjMv5O1HAW/kdHhydYBJRZ7drtspN
+=7fJc
+-----END PGP SIGNATURE-----
