@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/cucumber
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cucumber/ChangeLog,v 1.84 2014/09/15 05:20:33 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cucumber/ChangeLog,v 1.85 2014/09/15 05:29:46 graaff Exp $
+
+*cucumber-1.3.17 (15 Sep 2014)
+
+  15 Sep 2014; Hans de Graaff <graaff@gentoo.org> +cucumber-1.3.17.ebuild:
+  Version bump.
 
   15 Sep 2014; Hans de Graaff <graaff@gentoo.org> -cucumber-1.3.2.ebuild,
   -cucumber-1.3.10.ebuild, -cucumber-1.3.14.ebuild:
